--- a/Incedo_Octavius_Demo_2/Incedo_Octavius_Demo_2/Views/BusinessUserHome/Index.cshtml
+++ b/Incedo_Octavius_Demo_2/Incedo_Octavius_Demo_2/Views/BusinessUserHome/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Business User Home Page";
 }
 
 <!DOCTYPE html>
@@ -14,20 +14,20 @@
 <body>
 
     <div class="container-fluid text-center" style="color:black">
-        <h1 class="display-4">Octavius</h1>
         <div class="row container-fluid">
             <div class="col-md-6 d-flex align-items-center justify-content-center" style="background-color:orange; padding:50px">
                 <h2>
-                    @Html.ActionLink("Medical Reps", "Index", "KOL_Image")
+                    @Html.ActionLink("Degree", "Index", "BusinessUserDegreeModels")
                 </h2>
             </div>
             <div class="col-md-6 d-flex align-items-center justify-content-center" style="background-color: deepskyblue; padding: 50px">
                 <h2>
-                    @Html.ActionLink("Business User", "Index", "BusinessUserHome")
+                    @Html.ActionLink("Speciality", "Index", "Business_User")
                 </h2>
             </div>
         </div>
     </div>
+    @*@{Html.RenderAction("Index", "BusinessUserDegreeModels"); }*@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
 </body>
