--- a/Incedo_Octavius_Demo_2/Incedo_Octavius_Demo_2/Views/KOL_Image/Index.cshtml
+++ b/Incedo_Octavius_Demo_2/Incedo_Octavius_Demo_2/Views/KOL_Image/Index.cshtml
@@ -29,6 +29,9 @@
                     <img src="@item.Image_URL" class="card-img-top" alt="Dummy Profile Pic" style="object-fit:cover">
                     <div class="card-body">
                         <h5 class="card-title">@item.First_Name @item.Last_Name</h5>
+                        <h5>
+                            @Html.ActionLink("Details", "Details", "KOL_Details", new { id = item.kolID}, null)
+                        </h5>
                     </div>
                 </div>
             </div>
