--- a/Incedo_Octavius_Demo_2/Incedo_Octavius_Demo_2/Views/Shared/_Layout.cshtml
+++ b/Incedo_Octavius_Demo_2/Incedo_Octavius_Demo_2/Views/Shared/_Layout.cshtml
@@ -46,6 +46,9 @@
                         <li class="nav-item">
                             <span class="nav-link text-dark">@Html.ActionLink("KOL Image", "Index", "KOL_Image")</span>
                         </li>
+                        <li class="nav-item">
+                            <span class="nav-link text-dark">@Html.ActionLink("KOL Details", "Index", "KOL_Details")</span>
+                        </li>
                     </ul>
                 </div>
             </div>
